--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="5"
-                android:progress="2" />
+                android:progress="0" />
         </LinearLayout>
 
         <LinearLayout
@@ -69,7 +69,7 @@
             android:orientation="vertical">
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/frosting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -78,7 +78,7 @@
                 tools:checked="true" />
 
             <Switch
-                android:id="@+id/switch3"
+                android:id="@+id/candles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,13 +94,13 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/blowOutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blow Out" />
+                android:text="Extinguish" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/goodbyeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="goodbye"
