Changed Extinguish back to Blowout because I didn't read rules.
ALSO LAB 3 STUFF

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                 android:id="@+id/blowOutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Extinguish" />
+                android:text="BlowOut" />
 
             <Button
                 android:id="@+id/goodbyeButton"
